# AI_ID_Card_Smart_Scanner

./: app.py  pyproject.toml  readme.md  requirements.txt
extra_scripts/: DocXPand_25k_to_YOLO_Format.ipynb  yolo_polygon_seg_training.ipynb
src/: inference.py
