[project]
name = "project1"
version = "0.1.0"
description = ""
authors = [
    {name = "Kena",email = "kenahemnani@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.0,<3.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "ultralytics (>=8.3.178,<9.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
